--- a/front/src/components/Cards/Card.css
+++ b/front/src/components/Cards/Card.css
@@ -1,35 +1,35 @@
 .card {
-    width: 100px;
-    height: 100px;
-    border: 1px solid #000;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    position: relative;
-  }
-  
-  .card-value {
-    position: absolute;
-  }
-  
-  .top {
-    top: 0;
-  }
-  
-  .left {
-    left: 0;
-    top: 50%;
-    transform: translateY(-50%);
-  }
-  
-  .right {
-    right: 0;
-    top: 50%;
-    transform: translateY(-50%);
-  }
-  
-  .bottom {
-    bottom: 0;
-  }
-  
+  width: 100px;
+  height: 100px;
+  border: 1px solid #000;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+  transition: transform 0.2s ease-in-out;
+}
+
+.card-value {
+  position: absolute;
+}
+
+.top {
+  top: 0;
+}
+
+.left {
+  left: 0;
+  top: 50%;
+  transform: translateY(-50%);
+}
+
+.right {
+  right: 0;
+  top: 50%;
+  transform: translateY(-50%);
+}
+
+.bottom {
+  bottom: 0;
+}
