--- a/front/src/components/Game/Game.css
+++ b/front/src/components/Game/Game.css
@@ -1,10 +1,30 @@
+.game-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+  min-height: 100vh;
+}
 .game {
   display: flex;
   justify-content: center;
   align-items: center;
 }
-.player-hand {
+.player-hand-container {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   margin: 0 20px;
+}
+.player-hand {
+  margin: 20px 0;
+}
+.score {
+  margin-top: 10px;
+  font-size: 1.2em;
+  font-weight: bold;
 }
 .winner {
   font-size: 2em;
@@ -12,6 +32,8 @@
   color: #333;
 }
 .end-game {
+  position: absolute;
+  bottom: 20px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -30,16 +52,9 @@
 .reset-button:hover {
   background-color: #0056b3;
 }
-.player-hand-container {
-  position: relative;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  margin: 0 20px;
-}
 .cursor {
   position: absolute;
-  top: 0px;
+  top: -15px;
   width: 30px;
   height: auto;
 }
