--- a/front/src/components/Cards/Card.css
+++ b/front/src/components/Cards/Card.css
@@ -12,26 +12,38 @@
 
 .card-value {
   position: absolute;
+  z-index: 1; /* Place les valeurs au-dessus de l'image */
+  color: white;
+  font-weight: bold;
+  text-shadow: 1px 1px 2px black;
 }
 
-.top {
-  top: 0;
+.card-value.top {
+  top: 5px;
 }
 
-.left {
-  left: 0;
+.card-value.left {
+  left: 5px;
   top: 50%;
   transform: translateY(-50%);
 }
 
-.right {
-  right: 0;
+.card-value.right {
+  right: 5px;
   top: 50%;
   transform: translateY(-50%);
 }
 
-.bottom {
-  bottom: 0;
+.card-value.bottom {
+  bottom: 5px;
+}
+
+.card-image {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  position: absolute; /* Place l'image en arrière-plan */
+  z-index: 0; /* Assure que l'image est sous les valeurs */
 }
 
 .card-back {
@@ -46,4 +58,10 @@
   font-weight: bold;
   color: white;
   text-shadow: 1px 1px 2px black;
+}
+
+/* Styles spécifiques pour les cartes dans la main des joueurs */
+.hand-card-image .card-image {
+  object-fit: contain; /* Ajuste l'image pour la rendre plus adaptée */
+  border-radius: 5px;
 }
